[update] added EVN parm.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ elasticsearch:
   ports:
     - "9200:9200"
     - "9300:9300"
-  
+
 # kibana
 kibana:
   image: khiraiwa/docker-kibana
@@ -24,3 +24,6 @@ logstash:
     - /data_logstash:/data_logstash
   links:
     - elasticsearch:docker-elasticsearch
+  environment:
+    - AWS_ACCESS_KEY_ID=dummy
+    - AWS_SECRET_ACCESS_KEY=dummy
